			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

12-Oct-2004
~~~~~~~~~~~
Use a higher quality setting when scaling the backdrop image (Ken Hayber).

06-Oct-2004
~~~~~~~~~~~
Added PanelRemove() SOAP call (Sabin Iacob).
Bugfix: Mounting a directory that was accessed through a symlinked directory
	used the symbolic path, confusing the mount command (Thomas Leonard;
	reported by Anthony DiSante).

29-Sep-2004
~~~~~~~~~~~
Force panel to not take focus when using GTK 2.4 (Thomas Leonard).

28-Sep-2004
~~~~~~~~~~~
Minimum width of toolbar now an option (requested by Matthew Weier O'Phinney).

21-Sep-2004
~~~~~~~~~~~
Only examine items that are actually displayed, not all items in a directory.
Saves checking hidden files, which typically speeds up opening the home
directory. Removed an unnecessary extra scan when opening a directory
with the default filter setting. Removed the double scan when clicking Refresh
and two windows show the same directory (Thomas Leonard).

20-Sep-2004
~~~~~~~~~~~
Added option to make panels have the type _NET_WM_WINDOW_TYPE_DOCK (Tony
Houghton). Metacity needs this.

17-Sep-2004
~~~~~~~~~~~
If we can't guess a file's type from its name or extended attribute, try
looking at its contents too, if we have gnomevfs 2.8.0 or later available
(Thomas Leonard).

11-Sep-2004
~~~~~~~~~~~
Panel and pinboard icons can now have a single argument set for them.
If you need more than one argument, consider creating a wrapper
(Stephen Watson).

09-Sep-2004
~~~~~~~~~~~
Added --massif option for profiling memory usage (Thomas Leonard).
Warn about missing libsm in configure.in (reported by fedewico).

06-Sep-2004
~~~~~~~~~~~
When resizing a window, only warp the pointer as much as necessary to keep
it inside the window (Thomas Leonard).

02-Sep-2004
~~~~~~~~~~~
Ensure that a panel applet's properties are set before starting the applet
(reported by Tony Houghton).

01-Sep-2004
~~~~~~~~~~~