@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+15-Oct-2004
+~~~~~~~~~~~
+Allow multiple arguments for executable pinboard and panel icons.
+
 12-Oct-2004
 ~~~~~~~~~~~
 Use a higher quality setting when scaling the backdrop image (Ken Hayber).
